<resources>
    <string name="app_name">Urban Sports Club</string>
    <string name="title_activity_settings">Settings</string>
    <string name="main_menu_settings_title">Settings</string>


    <!-- Strings related to Check-In-Activity-->
    <string name="check_in_activity_label">Check-In erfolgreich</string>
    <string name="location_tv">bright site</string>
    <string name="location_city_part_tv">Schöneberg</string>
    <string name="member_id">100080036 - M\nMitgliedschaft</string>
    <string name="default_datetime">01. November 2017 6:35 nachm.</string>
    <string name="default_time_since">vor 0:00:29</string>
    <string name="default_category_content">Bouldern</string>
    <string name="category">Kategorie</string>
    <string name="share_checkin">Teile jetzt deinen Check-in</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Full name</string>
    <string name="pref_default_display_name">John Smith</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Locations -->
    <string name="pref_header_locations">Locations</string>
    <string name="pref_title_location">Location</string>
    <string name="pref_default_location">bright site</string>
    <string name="pref_title_area">Area</string>
    <string name="pref_default_area">Schöneberg</string>

    <string name="pref_title_category">Category</string>
    <string name="pref_default_category">Bouldern</string>

    <!-- Strings related to barcode scanner -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Navigation menu -->
    <string name="nav_email">hello@urbansportsclub.com</string>
    <string name="nav_phone">+49 30 6920 9213</string>
    <string name="nav_impressum">Impressum</string>
</resources>
