<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"
        android:id="@+id/nav_group1">
        <item
            android:id="@+id/nav_loggin"
            android:title="Anmelden" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/nav_group2">
        <item
            android:id="@+id/nav_choose_country"
            android:icon="@drawable/ic_menu_public"
            android:title="Land wählen" />
    </group>

    <item android:title="Support">
        <menu>
            <item
                android:id="@+id/nav_mail"
                android:icon="@drawable/ic_menu_email"
                android:title="@string/nav_email" />
            <item
                android:id="@+id/nav_phone"
                android:icon="@drawable/ic_menu_phone"
                android:title="@string/nav_phone" />
            <item
                android:id="@+id/nav_impressum"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/nav_impressum"/>
        </menu>
    </item>

</menu>
