<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.urbansportsclub.CheckInActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/green">

    <!-- location -->
    <LinearLayout
        android:id="@+id/location_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/location_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/location_tv"
                android:textColor="@color/black"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="16dp" />

            <TextView
                android:id="@+id/location_city_part_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:text="@string/location_city_part_tv"
                android:textColor="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/location_tv"
                app:layout_constraintTop_toBottomOf="@+id/location_tv" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_if_check_118698"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginRight="20dp"
                android:layout_marginEnd="20dp" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <!-- time and name and picture-->
    <LinearLayout
        android:id="@+id/profile_linear_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_linear_layout">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/person_img"
            android:layout_marginStart="16dp" />

        <TextView
            android:id="@+id/profile_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/profile_image"
            app:layout_constraintLeft_toRightOf="@+id/profile_image"
            android:layout_marginLeft="16dp"
            android:textSize="28sp"
            android:text="@string/pref_default_display_name"
            android:textColor="@color/white"
            android:layout_marginStart="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/profile_name_tv"
            app:layout_constraintLeft_toLeftOf="@+id/profile_name_tv"
            android:layout_marginTop="16dp"
            android:textSize="12sp"
            android:text="@string/member_id"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/datetime_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/profile_image"
            app:layout_constraintLeft_toLeftOf="@+id/profile_image"
            android:layout_marginTop="20dp"
            android:textSize="28sp"
            android:text="@string/default_datetime"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@+id/datetime_tv"
            app:layout_constraintTop_toBottomOf="@+id/datetime_tv"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:text="@string/default_time_since"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <!-- kategorie -->

    <LinearLayout
        android:id="@+id/category_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/profile_linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/white">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/category_content_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="12dp"
                android:textSize="16sp"
                android:text="@string/default_category_content"
                android:textColor="@color/black"
                android:layout_marginStart="16dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/category_content_tv"
                app:layout_constraintLeft_toLeftOf="@+id/category_content_tv"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="2dp"
                android:textSize="12sp"
                android:text="@string/category"
                android:textColor="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_linear_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/green"
        app:layout_constraintTop_toBottomOf="@+id/category_linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textSize="18sp"
                android:text="@string/share_checkin"
                android:textColor="@color/white"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <!-- logo -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/share_linear_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0dp"
        android:background="@color/white">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:src="@drawable/USC_logo_frame"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"/>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>
